<resources>
    <string name="app_name">Red Bubble project</string>
    <string name="logintxt">LOGIN</string>
    <string name="loginTxt">LOGIN</string>
    <string name="userName">User Name</string>
    <string name="navigation_drawer_open">Open navigation drawe</string>
    <string name="navigation_drawer_close">Close navigation drawe</string>
    <string name="weight">weight</string>
    <string name="height">height</string>
    <string name="calculateBMI">calculateBMI</string>
    <string name="very_severely_underweight">Very severely underweight</string>
    <string name="severely_underweight">Severely underweight</string>
    <string name="underweight">Underweight</string>
    <string name="normal">Normal</string>
    <string name="overweight">Overweight</string>
    <string name="obese_class_i">Obesity class i</string>
    <string name="obese_class_ii">Obesity class ii</string>
    <string name="obese_class_iii">Obesity class iii</string>
    <string name="testId1">Emergency Places</string>
    <string name="calc">Calculate BMI</string>
    <string name="weightKg">Weight (kg)</string>
    <string name="Height">Height (cm)</string>
    <string name="bmicalc">BMI Calculator</string>

    <string name="textView_gpaview">Here is your GPA</string>
    <string name="gpa">GPA Calculation</string>


    <!--Strings for on boarding screen-->

    <!--Titles-->
    <string name="first_slide_title">Health</string>
    <string name="second_slide_title">Official</string>
    <string name="third_slide_title">Family</string>
    <string name="fourth_slide_title">Budget</string>

    <!--Descriptions-->
    <string name="first_slide_desc">There are several features under this facility that will make it easier for you to move forward with your healthy life. features include BMI calculator, health guidance.</string>
    <string name="second_slide_desc">Here are some essentials for your office life and university life. features GPA calculation, office notes, education notes, etc. it also contains the telephone numbers of the government agencies you need</string>
    <string name="third_slide_desc">This facility contains some features for the happiness of your beloved family. features include grocery list, family calendar, and birthday reminder</string>
    <string name="fourth_slide_desc">This facility contains features that make your economic life easier features include budget manager</string>

    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>

    <string name="family">Family</string>
    <string name="home">Home</string>
    <string name="health">Health</string>
    <string name="official">Official</string>
    <string name="budget">Budget</string>
    <string name="confirm">Confirm</string>

    <!--SignUp strings-->
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="retailer_heading">Smart Your Life</string>
    <string name="create_account">Create Account</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="full_name">Enter Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="viewhealthprofiles">View Health Profiles</string>
    <string name="search">Search</string>
    <string name="entername">Enter Name</string>
    <string name="proname">Name</string>

    <string-array name="items">
        <item>Select item</item>
        <item>Transport</item>
        <item>Food</item>
        <item>House-Rent</item>
        <item>Entertainment</item>
        <item>Education</item>
        <item>Charity</item>
        <item>Apparel</item>
        <item>Health</item>
        <item>Personal</item>
        <item>Other</item>

    </string-array>


</resources>