<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_signup"
    android:background="@color/white"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/startup_image"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retailer_heading"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:fontFamily="@font/ubuntu"
            android:textStyle="italic"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp">

            <Button
                android:id="@+id/login_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:onClick="callLoginScreen"
                android:backgroundTint="@color/themeColor"
                android:fontFamily="@font/ubuntu"
                android:text="@string/login"
                android:textColor="@color/white"
                tools:ignore="ButtonStyle"
                android:transitionName="trasition_login"/>

            <Button
                android:id="@+id/signup_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:onClick="callSignupScreen"
                android:backgroundTint="@color/themeColor"
                android:fontFamily="@font/ubuntu"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:transitionName="transition_login"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>