<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup"
    android:background="@color/themeColor"
    android:padding="30dp"
    android:transitionName="trasition_login"
    android:id="@+id/signup_screen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/signup_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:srcCompat="@drawable/back_btn"
            />

        <TextView
            android:id="@+id/signup_title_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/create_account"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="50sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                app:startIconDrawable="@drawable/name_icon"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/white"
                app:hintTextColor="@color/white"
                android:textColorHint="@color/white"
                app:endIconMode="clear_text"
                app:endIconTint="@color/white"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:startIconDrawable="@drawable/email_icon"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/white"
                app:hintTextColor="@color/white"
                android:textColorHint="@color/white"
                app:endIconMode="clear_text"
                app:endIconTint="@color/white"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                app:startIconDrawable="@drawable/phone_icon"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/white"
                app:hintTextColor="@color/white"
                android:textColorHint="@color/white"
                app:endIconMode="clear_text"
                app:endIconTint="@color/white"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                app:startIconDrawable="@drawable/password_icon"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/white"
                app:hintTextColor="@color/white"
                android:textColorHint="@color/white"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white"
                app:endIconTint="@color/white"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/signup_enter_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/black"
            android:elevation="5dp"
            android:fontFamily="@font/ubuntu"
            android:text="@string/sign_up"
            android:textColor="@color/white" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:layout_marginLeft="30dp"
            android:visibility="gone"
            />

    </LinearLayout>

</ScrollView>