<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/themeColor"
    android:padding="30dp"
    tools:context=".Login"
    android:transitionName="trasition_login"
    android:id="@+id/login_screen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/login_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:srcCompat="@drawable/back_btn"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/login_title_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="50sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="80dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/email"
                app:hintTextColor="@color/white"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeWidth="2dp"
                app:startIconDrawable="@drawable/email_icon"
                app:startIconTint="@color/white"
                app:endIconMode="clear_text"
                app:endIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/ubuntu"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/enter_password"
                app:hintTextColor="@color/white"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeWidth="2dp"
                app:startIconDrawable="@drawable/password_icon"
                app:startIconTint="@color/white"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/white"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:textColor="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <CheckBox
                    android:id="@+id/remeberMe"
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:buttonTint="@color/white"
                    android:text="@string/remember_me"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/forgetPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:backgroundTint="#00000000"
                    android:text="@string/forget_password"
                    android:textColor="@color/white" />


            </RelativeLayout>

            <Button
                android:id="@+id/login_enter_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                android:fontFamily="@font/ubuntu"
                android:layout_marginTop="20dp" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20sp"
                android:layout_marginLeft="30dp"
                android:visibility="gone"
                />


        </LinearLayout>



    </LinearLayout>


</ScrollView>