<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainHome"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/themeColor"
            android:layout_marginBottom="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="15sp"
                app:srcCompat="@drawable/ic_baseline_menu_24"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_bold"
                android:padding="15sp"
                android:text="@string/home"
                android:textSize="24sp"
                android:layout_centerVertical="true"
                android:layout_marginStart="35dp"
                android:layout_marginLeft="35dp"
                android:textColor="@color/white"/>

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#00000000"
            android:layout_margin="20dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="@drawable/main_home_cardview">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/family"
                    android:textSize="30sp"
                    android:fontFamily="@font/ubuntu"
                    android:padding="40dp"
                    android:textColor="@color/white"/>

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/family"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#00000000"
            android:layout_margin="20dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="@drawable/main_home_cardview1">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/health"
                    android:layout_alignParentLeft="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/ubuntu"
                    android:padding="40dp"
                    android:text="@string/health"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#00000000"
            android:layout_margin="20dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="@drawable/main_home_cardview">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/official"
                    android:textSize="30sp"
                    android:fontFamily="@font/ubuntu"
                    android:padding="40dp"
                    android:textColor="@color/white"/>

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/formal"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#00000000"
            android:layout_margin="20dp"
            app:cardElevation="8dp">

            <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:background="@drawable/main_home_cardview1">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/budget"
                android:layout_alignParentLeft="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/budget"
                android:textSize="30sp"
                android:fontFamily="@font/ubuntu"
                android:padding="40dp"
                android:textColor="@color/white"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>