<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".HealthProfileFinder">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/health_profiel_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:background="@color/themeColor"
            android:orientation="vertical"
            app:cardCornerRadius="7dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:padding="20dp"
                android:background="@color/themeColor">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="center"
            android:text="@string/viewhealthprofiles"
            android:textColor="@color/white"
            android:textSize="30sp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/entername"
                android:textColorHint="@color/black">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/serach_nameedit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/ubuntu"
                    android:inputType="text"
                    android:textColor="@color/black" />


            </com.google.android.material.textfield.TextInputLayout>


                        <Button
                            android:id="@+id/reg_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="80dp"
                            android:backgroundTint="@color/themeColor"
                            android:text="@string/search"
                            android:onClick="searched"
                            android:textColor="@color/white" />

                        <RelativeLayout
                            android:id="@+id/login_progress_bar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:backgroundTint="@color/themeColor"
                            android:visibility="gone">

                            <ProgressBar
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_centerInParent="true" />

                            </RelativeLayout>


                            </RelativeLayout>


                            </LinearLayout>


                            </ScrollView>